[project]
name = "maskgit"
version = "0.1.0"
description = "Environment converted from env.yaml for uv"
requires-python = ">=3.8,<3.9"
dependencies = [
  "packaging==21.3",
  "torch==2.1.0",
  "torchvision==0.16.0",
  "torch-fidelity",
  "torchmetrics",
  "matplotlib",
  "seaborn",
  "opencv-python==4.8.0.74",
  "tqdm",
  "pillow",
  "scikit-learn",
  "clip",
  "pytorch-lightning==1.0.8",
  "omegaconf==2.0.0",
  "einops==0.3.0",
  "webdataset",
  "diffuser",
  "pycocotools",
  "transformers",
  "accelerate",
  "clean-fid",
  "gradio",
  "huggingface_hub",
]

# Configure PyTorch CUDA 11.8 wheel index and map torch packages to it
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }


